# chiptrack

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  chiptrack.js  gba.zig  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
instruments/: build.zig  ct.zig  default-instruments.wasm  default-instruments.wat  default-instruments.zig
linker_scripts/: mono_boot.ld
pkg/: index.html
res/: Makefile  build.zig  ct.zig  default-instruments.rhai  default-instruments.wasm  default-instruments.zig  gba.zig  instruments.rhai
src/: gba_platform.rs  log.rs  main.rs  midi.rs  sequencer.rs  sound.rs  sound_engine.rs  sound_renderer.rs  synth.rs  synth_script.rs  ui.rs  utils.rs
src/gba_platform/: renderer.rs
src/sequencer/: markdown.rs
src/sound_renderer/: emulated.rs  gba_sound.rs
src/synth_script/: test.rs  wasm.rs  wasm_host.rs  wasm_web.rs
ui/: common.slint  data.slint  gba_main.slint  globals.slint  instruments.slint  main.60  main.slint  menu_dialog.slint  overlay_dialog.60  patterns.slint  piano.slint  settings_dialog.slint  song.slint  visualization.slint  widgets.slint
ui/fonts/: README.TXT
v0.2/: chiptrack.js  index.html
v0.3/: chiptrack.js
v0.4/: chiptrack.js
v0.5/: chiptrack.js  index.html
