[package]
name = "chiptrack"
version = "0.2.0"
authors = ["Jocelyn Turcotte <turcotte.j@gmail.com>"]
edition = "2021"

## wasm build stuff
## Uncomment and build with: wasm-pack build --release --target web -- --no-default-features --features=desktop_web
# [lib]
# crate-type = ["cdylib"]
# path = "src/main.rs"
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm-bindgen = { version = "0.2" }
# wasm-bindgen-futures = { version = "0.4" }
# js-sys = { version = "0.3" }
# web-sys = { version = "0.3", features=["console", "Location", "UrlSearchParams"] }
# console_error_panic_hook = "0.1"
# [patch.crates-io]
# blip_buf = { path = "../blip_buf-rs"}


[features]
default = ["desktop_native"]
std = ["slint/std"]
desktop = ["std", "slint/backend-winit", "slint/renderer-winit-femtovg", "cpal", "rboy", "once_cell", "tiny-skia", "serde_json", "wat", "notify", "midir", "midly", "url", "ehttp", "pulldown-cmark", "regex"]
desktop_native = ["desktop", "wamr-sys/std", "native-dialog"]
desktop_web = ["desktop"]
gba = ["dep:gba", "wamr-sys", "libm", "slint/unsafe-single-threaded", "i-slint-core/unsafe-single-threaded", "slint/libm", "embedded-alloc", "critical-section/restore-state-bool"]

[build-dependencies.slint-build]
version = "1.1.0"
[dependencies.slint]
version = "1.1.0"
default-features = false
features = ["compat-1-0"]
[dependencies.i-slint-core]
version = "=1.1.0"
default-features = false
optional = true


[dependencies.rboy]
git = "https://github.com/jturcotte/rboy.git"
rev = "836b4e7a58288a29c13bf7f8b967358c7331ee41"
# Use as a lib, features are used by its bin's main.rs only.
default-features = false
optional = true

[dependencies.wamr-sys]
git = "https://github.com/jturcotte/wamr-sys.git"
rev = "aa1447d9a97971dd2fbccd215b7a473b3b4718a5"
default-features = false
optional = true

[dependencies]
cpal = { version = "0.13", features = ["wasm-bindgen"], optional = true }
once_cell = { version = "1", optional = true }
tiny-skia = { version = "0.6", optional = true }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", optional = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }
wat = { version = "1", optional = true }
notify = { version = "4", optional = true }
midir = { version = "0.8", optional = true }
midly = { version = "0.5", optional = true }
url = { version = "2", optional = true }
ehttp = { version = "0.2", optional = true }
pulldown-cmark = { version = "0.9", optional = true }
regex = { version = "1", optional = true }
native-dialog = { version = "0.6", optional = true }

gba = { version = "0.11", optional = true }
libm = { version = "0.2", optional = true }
critical-section = { version = "1", optional = true }
embedded-alloc = { version = "0.5", optional = true }

# [profile.release]
# debug = true
